# project-template

./: .gitignore  CMakeLists.txt  README.md
executive/: CMakeLists.txt  README.md  executive.cpp  executive.h  main.cpp
executive/client/: exec_client.cpp  exec_client.h  exec_client_msg.cpp  exec_client_msg.h  exec_client_msg_version.cpp  exec_client_msg_version.h  exec_client_msg_watchdog.cpp  exec_client_msg_watchdog.h
executive/process/: exec_process.cpp  exec_process.h  exec_process_data.h  exec_process_map.cpp  exec_process_map.h
executive/server/: exec_server.cpp  exec_server.h  exec_server_msg.cpp  exec_server_msg.h  exec_server_msg_version.cpp  exec_server_msg_version.h  exec_server_msg_watchdog.cpp  exec_server_msg_watchdog.h
logger/: CMakeLists.txt  README.md  logger.cpp  logger.h  main.cpp
logger/client/: exec_client.cpp  exec_client.h  exec_client_msg.cpp  exec_client_msg.h  exec_client_msg_version.cpp  exec_client_msg_version.h  exec_client_msg_watchdog.cpp  exec_client_msg_watchdog.h  logger_exec_client.cpp  logger_exec_client.h  logger_exec_client_msg.cpp  logger_exec_client_msg.h  logger_exec_client_msg_version.cpp  logger_exec_client_msg_version.h  logger_exec_client_msg_watchdog.cpp  logger_exec_client_msg_watchdog.h
message_queues/: CMakeLists.txt  README.md  message_queue.cpp  message_queue.h  message_queue_client.cpp  message_queue_client.h  message_queue_server.cpp  message_queue_server.h
model/: CMakeLists.txt  README.md  main.cpp  model.cpp  model.h
model/client/: model_exec_client.cpp  model_exec_client.h  model_exec_client_msg.cpp  model_exec_client_msg.h  model_exec_client_msg_version.cpp  model_exec_client_msg_version.h  model_exec_client_msg_watchdog.cpp  model_exec_client_msg_watchdog.h
proto_buffers/: CMakeLists.txt  executive.proto  logger.proto  model.proto
